# lanefollowing

./: CMakeLists.txt  package.xml  readme.md
include/lanefollowing/: lanefollowing.hpp
src/: ahead.py  avoid.cpp  detector.cpp  detectorpy.py  final.cpp  initpoint.cpp  lanefollowing.cpp  switch.py  testpts.py
src/config/: twist_mux.yaml
src/lanefollower/: detector.cpp  detector.py  final.cpp  follow.py  go.py  initpoint.cpp  lane_align.py  lanegoal.py  mid_ipm.py  midpts.cpp  pixelcoord.py  robot_navigator.py  test.cpp  vect.py
src/obstacles/: ahead.py  aligner.py  avoid.cpp  initial.py  nav2pose.py  robot_navigator.py  stop.py  switch.py
